--- a/index.html
+++ b/index.html
@@ -16,46 +16,50 @@
         <span class="navbar-brand mb-0 h1">Antony Laroche</span>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link active" href="#">About</a>
+                <a class="nav-link active" href="./index.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="./contact.html">Contact</a>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li> -->
         </ul>
     </nav>
 
     <div class="container">
+        <div class="row" id="toprow"></div>
         <div class="row">
-            <div class="col-sm">
+            <div class="col-sm-8" id="aboutme">
                 <h2>About Me</h2>
-                <img src="./assets/images/CoolPicMe.jpg" class="rounded float-left" alt="Antony Laroche" width="200" height="auto">
-                <p class="AllAboutMe"> I was born in Port-au-Prince, Haiti. In addition to English, I speak French fluently. I have a Bachelor's
-                    degree in Chemical Engineering from the University of Florida and a Master's in Engineering Management
-                    from the George Washington University. I have spent the last 18 years working in the refining industry
-                    in a wide variety of roles ranging from process engineering to project development and refinery economics.
+                <img id="myfoto" src="./assets/images/CoolPicMe.jpg" class="rounded float-left" alt="Antony Laroche" width="200" height="auto">
+                <p class="AllAboutMe"> I have a Bachelor's degree in Chemical Engineering from the University of Florida and a Master's in Engineering
+                    Management from the George Washington University. I have spent the last 18 years working in the refining
+                    industry in a wide variety of roles ranging from process engineering to project development and refinery
+                    economics.
                 </p>
                 <p class="AllAboutMe">In addition to my work as an engineer, I have a passion for finance and economics. As a result, I spend a
                     lot of my spare time reading and analyzing the financial news of the day. I take pleasure in deciphering
                     insights from the wealth of data available to us from news outlets and government agencies with the ultimately
                     goal of converting those insight to personal investment strategies and general worldly advice. </p>
-                <p class="AllAboutMe">I am Full Stack Web Developer who is available to perform freelance work for content producers who want to
-                    share their work, art, skills, wisdom, knowledge with the world. I also consult and enhance existing
-                    3rd party developed websites to improve user experience, add interactivity, add data collection and analysis.
+                <p class="AllAboutMe">I aspire to be a Full Stack Web Developer who is available to perform freelance work for content producers
+                    who want to share their art, skills, wisdom, and knowledge with the world. I also look forward to using
+                    my skills to enhance 3rd party developed websites by improving user experience, adding interactivity,
+                    data collection and analysis.
                 </p>
             </div>
-            <div class="col-sm">
-                
-                <div class="container">
-                        <h3>Connect with Me</h3>
-                     <img class="img-fluid" src="./assets/images/GitHubIcon.png" alt="GitHub">
-                    <img class="img-fluid" src="./assets/images/linkedInIcon.png" alt="LinkedIn">
-                    <img class="img-fluid" src="./assets/images/StackOverflowIcon.png" alt="Stacked Overflow">
+            <div class="col-sm-4">
+
+                <div class="card text-center">
+                    <div class="card-header">Connect with Me</div>
+                    <div class="card-body justify-content-center">
+                        <a href="http://github.com/ajlaroche">
+                            <img class="sociallinks" src="./assets/images/GitHubIcon.png" alt="GitHub"> </a>
+                        <a href="http://linkedin.com/in/antony-laroche-782248121">
+                            <img class="sociallinks" src="./assets/images/linkedInIcon.png" alt="LinkedIn"> </a>
+                        <a href="https://stackexchange.com/users/12229521/ajtherock">
+                            <img class="sociallinks" src="./assets/images/StackOverflowIcon.png" alt="Stacked Overflow"> </a>
+                    </div>
                 </div>
             </div>
         </div>
