Finished bootstrap version of portfolio

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!--start of nav section-->
     <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1">Antony Laroche</span>
         <ul class="nav justify-content-end">
@@ -30,9 +31,9 @@
     <div class="container">
         <div class="row" id="toprow"></div>
         <div class="row">
-            <div class="col-sm-8" id="aboutme">
+            <div class="col-sm-8 main-column">
                 <h2>About Me</h2>
-                <img id="myfoto" src="./assets/images/CoolPicMe.jpg" class="rounded float-left" alt="Antony Laroche" width="200" height="auto">
+                <img id="myfoto" src="./assets/images/CoolPicMe.jpg" class="rounded float-left" alt="Antony Laroche" width="200">
                 <p class="AllAboutMe"> I have a Bachelor's degree in Chemical Engineering from the University of Florida and a Master's in Engineering
                     Management from the George Washington University. I have spent the last 18 years working in the refining
                     industry in a wide variety of roles ranging from process engineering to project development and refinery
