Fixed phone responsiveness with media query

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <div class="container">
         <div class="row" id="toprow"></div> <!--this row adds space above entry area-->
         <div class="row">
-            <div class="col-sm-8 main-column">
+            <div class="col-md-8 main-column">
                 <h2>Contact</h2>
                 <div class="form-row">
                     <div class="form-group col-10"> <!--this column will hold the email input form-->
@@ -53,7 +53,7 @@
             </div>
 
 
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <div class="card text-center">
                     <div class="card-header">Connect with Me</div>
                     <div class="card-body justify-content-center">
