--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
         <!--this row adds space above entry area-->
         <div class="row">
             <!--main content column-->
-            <div class="col-sm-8 main-column">
+            <div class="col-md-8 main-column">
                 <h2>Portfolio</h2>
                 <div class="row portfoliorows">
                     <!--First row-->
@@ -86,7 +86,7 @@
                     <div class="col-6"></div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <!--contact card column-->
                 <div class="card text-center">
                     <div class="card-header">Connect with Me</div>
