--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
         <div class="row" id="toprow"></div>
         <div class="row">
-            <div class="col-sm-8 main-column">
+            <div class="col-md-8 main-column">
                 <h2>About Me</h2>
                 <img id="myfoto" src="./assets/images/CoolPicMe.jpg" class="rounded float-left" alt="Antony Laroche" width="200">
                 <p class="AllAboutMe"> I have a Bachelor's degree in Chemical Engineering from the University of Florida and a Master's in Engineering
@@ -49,7 +49,7 @@
                     data collection and analysis.
                 </p>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
 
                 <div class="card text-center">
                     <div class="card-header">Connect with Me</div>
