added link to hangman game in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                     <!--First row-->
                     <div class="col-6">
                         <div class="card">
-                            <img class="card-img" src="./assets/images/hangingOn.jpeg" alt="Hangman">
+                           <a href="https://ajlaroche.github.io/Hangman-Game/"> <img class="card-img" src="./assets/images/hangingOn.jpeg" alt="Hangman"></a>
                             <div class="card-img-overlay">
                                 <h3>Hangman</h3>
                             </div>
