changed RPG game picture

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="col-6">
                         <div class="card">
-                           <a href="https://ajlaroche.github.io/week-4-game/"> <img class="card-img" src="./assets/images/Fireworks.jpeg" alt="RPG Game"></a>
+                           <a href="https://ajlaroche.github.io/week-4-game/"> <img class="card-img" src="./assets/images/got_chair.jpg" alt="RPG Game"></a>
                             <div class="card-img-overlay">
                                 <h3>RPG Game</h3>
                             </div>
