--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                     <!--second row-->
                     <div class="col-6">
                         <div class="card">
-                            <img class="card-img" src="./assets/images/Bookworm.jpeg" alt="Trivia Game">
+                            <a href="https://ajlaroche.github.io/TriviaGame/">  <img class="card-img" src="./assets/images/Bookworm.jpeg" alt="Trivia Game"> </a>
                             <div class="card-img-overlay">
                                 <h3>Trivia Game</h3>
                             </div>
