Added Gif Theater to portfolio links

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,14 @@
                                     </div>
                                 </div>
                     </div>
-                    <div class="col-6"></div>
+                    <div class="col-6">
+                        <div class="card">
+                            <a href="https://ajlaroche.github.io/GifTheater/"> <img class="card-img" src="./assets/images/cat_stage.jpg" alt="Gif Theather"> </a>
+                            <div class="card-img-overlay">
+                                <h3>Gif Theater</h3>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
