fixed links in connect with me section

--- a/contact.html
+++ b/contact.html
@@ -57,12 +57,9 @@
                 <div class="card text-center">
                     <div class="card-header">Connect with Me</div>
                     <div class="card-body justify-content-center">
-                        <a href="http://github.com/ajlaroche">
-                            <img class="sociallinks" src="./assets/images/GitHubIcon.png" alt="GitHub"> </a>
-                        <a href="http://linkedin.com/in/antony-laroche-782248121">
-                            <img class="sociallinks" src="./assets/images/linkedInIcon.png" alt="LinkedIn"> </a>
-                        <a href="https://stackexchange.com/users/12229521/ajtherock">
-                            <img class="sociallinks" src="./assets/images/StackOverflowIcon.png" alt="Stacked Overflow"> </a>
+                        <a href="http://github.com/ajlaroche"><img class="sociallinks" src="./assets/images/GitHubIcon.png" alt="GitHub"></a>
+                        <a href="http://linkedin.com/in/antony-laroche-782248121"><img class="sociallinks" src="./assets/images/linkedInIcon.png" alt="LinkedIn"></a>
+                        <a href="https://stackexchange.com/users/12229521/ajtherock"><img class="sociallinks" src="./assets/images/StackOverflowIcon.png" alt="Stacked Overflow"></a>
                     </div>
                 </div>
             </div>
