--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,9 @@
                     <!--First row-->
                     <div class="col-6">
                         <div class="card">
-                           <a href="https://ajlaroche.github.io/Hangman-Game/"> <img class="card-img" src="./assets/images/hangingOn.jpeg" alt="Hangman"></a>
+                            <a href="https://ajlaroche.github.io/Hangman-Game/">
+                                <img class="card-img" src="./assets/images/hangingOn.jpeg" alt="Hangman">
+                            </a>
                             <div class="card-img-overlay">
                                 <h3>Hangman</h3>
                             </div>
@@ -47,7 +49,9 @@
                     </div>
                     <div class="col-6">
                         <div class="card">
-                           <a href="https://ajlaroche.github.io/week-4-game/"> <img class="card-img" src="./assets/images/got_chair.jpg" alt="RPG Game"></a>
+                            <a href="https://ajlaroche.github.io/week-4-game/">
+                                <img class="card-img" src="./assets/images/got_chair.jpg" alt="RPG Game">
+                            </a>
                             <div class="card-img-overlay">
                                 <h3>RPG Game</h3>
                             </div>
@@ -58,7 +62,8 @@
                     <!--second row-->
                     <div class="col-6">
                         <div class="card">
-                            <a href="https://ajlaroche.github.io/TriviaGame/">  <img class="card-img" src="./assets/images/Bookworm.jpeg" alt="Trivia Game"> </a>
+                            <a href="https://ajlaroche.github.io/TriviaGame/">
+                                <img class="card-img" src="./assets/images/Bookworm.jpeg" alt="Trivia Game"> </a>
                             <div class="card-img-overlay">
                                 <h3>Trivia Game</h3>
                             </div>
@@ -76,16 +81,19 @@
                 <div class="row portfoliorows">
                     <!--third row-->
                     <div class="col-6">
-                            <div class="card">
-                                   <a href="https://ajlaroche.github.io/RPS-Multiplayer/"> <img class="card-img" src="./assets/images/DataDriven.jpeg" alt="Rock Paper Scissors"></a>
-                                    <div class="card-img-overlay">
-                                        <h3>Rock Paper Scissors</h3>
-                                    </div>
-                                </div>
+                        <div class="card">
+                            <a href="https://ajlaroche.github.io/RPS-Multiplayer/">
+                                <img class="card-img" src="./assets/images/DataDriven.jpeg" alt="Rock Paper Scissors">
+                            </a>
+                            <div class="card-img-overlay">
+                                <h3>Rock Paper Scissors</h3>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-6">
                         <div class="card">
-                            <a href="https://ajlaroche.github.io/GifTheater/"> <img class="card-img" src="./assets/images/cat_stage.jpg" alt="Gif Theather"> </a>
+                            <a href="https://ajlaroche.github.io/GifTheater/">
+                                <img class="card-img" src="./assets/images/cat_stage.jpg" alt="Gif Theather"> </a>
                             <div class="card-img-overlay">
                                 <h3>Gif Theater</h3>
                             </div>
@@ -95,12 +103,14 @@
                 <div class="row portfoliorows">
                     <!--Fourth row-->
                     <div class="col-6">
-                            <div class="card">
-                                   <a href="https://github.com/ajlaroche/liri-node-app.git"> <img class="card-img" src="./assets/images/monastery.jpg" alt="LIRI"></a>
-                                    <div class="card-img-overlay">
-                                        <h3>LIRI</h3>
-                                    </div>
-                                </div>
+                        <div class="card">
+                            <a href="https://github.com/ajlaroche/liri-node-app.git">
+                                <img class="card-img" src="./assets/images/monastery.jpg" alt="LIRI">
+                            </a>
+                            <div class="card-img-overlay">
+                                <h3>LIRI</h3>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-6">
                         <!-- Insert next product here -->
@@ -112,12 +122,9 @@
                 <div class="card text-center">
                     <div class="card-header">Connect with Me</div>
                     <div class="card-body justify-content-center">
-                        <a href="http://github.com/ajlaroche">
-                            <img class="sociallinks" src="./assets/images/GitHubIcon.png" alt="GitHub"> </a>
-                        <a href="http://linkedin.com/in/antony-laroche-782248121">
-                            <img class="sociallinks" src="./assets/images/linkedInIcon.png" alt="LinkedIn"> </a>
-                        <a href="https://stackoverflow.com/users/8926024/ajtherock">
-                            <img class="sociallinks" src="./assets/images/StackOverflowIcon.png" alt="Stacked Overflow"> </a>
+                        <a href="https://github.com/ajlaroche"><img class="sociallinks" src="./assets/images/GitHubIcon.png" alt="GitHub"></a>
+                        <a href="https://linkedin.com/in/antony-laroche-782248121"><img class="sociallinks" src="./assets/images/linkedInIcon.png" alt="LinkedIn"></a>
+                        <a href="https://stackoverflow.com/users/8926024/ajtherock"><img class="sociallinks" src="./assets/images/StackOverflowIcon.png" alt="Stacked Overflow"></a>
                     </div>
                 </div>
             </div>
